--- a/style.css
+++ b/style.css
@@ -109,10 +109,8 @@ header {
 
   filter:
     drop-shadow(0 24px 48px rgba(0,0,0,0.35))
-    drop-shadow(0 90px 160px rgba(0,0,0,0.3));
+    drop-shadow(0 90px 160px rgba(0, 0, 0, 0.066));
 
-  animation: floatSlow 9s ease-in-out infinite;
-  will-change: transform;
 }
 
 @keyframes floatSlow {
