--- a/style.css
+++ b/style.css
@@ -133,8 +133,8 @@ header {
     0 1px 0 rgba(255,255,255,0.35),
     0 2px 0 rgba(255,255,255,0.3),
     0 3px 0 rgba(255,255,255,0.25),
-    0 8px 16px rgba(0,0,0,0.22),
-    0 24px 60px rgba(0,0,0,0.3);
+    0 8px 16px rgba(86, 86, 86, 0.49),
+    0 24px 60px rgba(109, 109, 109, 0.526);
 }
 
 /* ===============================
